eCom Featured Product Images: Image alignment issue in FF and IE (DT-1169)

--- a/css/widgets-ecom.less
+++ b/css/widgets-ecom.less
@@ -899,35 +899,7 @@
 				padding: 30px;
 				border-radius: 6px;
 				
-				// Flex
-				display: -webkit-box;
-			    display: -moz-box;
-			    display: -ms-flexbox;
-			    display: -webkit-flex;
-			    display: flex;
-			    -webkit-box-direction: normal;
-			    -moz-box-direction: normal;
-			    -webkit-box-orient: horizontal;
-			    -moz-box-orient: horizontal;
-			    -webkit-flex-direction: row;
-			    -ms-flex-direction: row;
-			    flex-direction: row;
-			    -webkit-flex-wrap: wrap;
-			    -ms-flex-wrap: wrap;
-			    flex-wrap: wrap;
-			    -webkit-box-pack: justify;
-			    -moz-box-pack: justify;
-			    -webkit-justify-content: space-between;
-			    -ms-flex-pack: justify;
-			    justify-content: space-between;
-			    -webkit-align-content: stretch;
-			    -ms-flex-line-pack: stretch;
-			    align-content: stretch;
-			    -webkit-box-align: center;
-			    -moz-box-align: center;
-			    -webkit-align-items: center;
-			    -ms-flex-align: center;
-			    align-items: center;
+
 				
 				@media @mobile {
 					padding: 16px;
